--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,23 @@
 ---
 layout: default
 ---
+
+<head>
+   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   <title>{{ page.title }}</title>
+   <meta name="author" content="Aakash Kathuria" />
+
+   <!-- syntax highlighting CSS -->
+   <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css" type="text/css" />
+
+   <!-- Homepage CSS -->
+   <link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css" type="text/css" media="screen, projection" />
+
+   <!-- Typekit -->
+   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
+   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+</head>
+
 <div id="post">
 {{ content }}
 </div>
